--- a/database-wiki/resources/data/html/wiki_template.html
+++ b/database-wiki/resources/data/html/wiki_template.html
@@ -6,8 +6,7 @@
 </title>
 @css
 <link rel="icon" type="image/gif" href="/pictures/favicon.gif">
-<script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.2.6.min.js"></script>
-<script type="text/javascript" src="/js/dialog.js"></script>
+@import
 </head>
 <body>
 	<table align="center" class="main">
