* Undid stray changes

--- a/database-wiki/resources/data/html/wiki_template.html
+++ b/database-wiki/resources/data/html/wiki_template.html
@@ -54,11 +54,9 @@
 		<table class="toggle_menu">
 			<tr>
 				<td class="toggle_menu">
-					<a class="toggle_menu" href="#" onclick="dspToggleAnnotation(); return false;">Comments  <img border=0 src="/pictures/annotation_small.gif"></a>
-					       
-					<a class="toggle_menu" href="#" onclick="dspToggleProvenance(); return false;">History  <img border=0 src="/pictures/provenance_small.gif"></a>
-
-					<a class="toggle_menu" href="#" onclick="dspToggleProvenance(); return false;">Visualisation  <img border=0 src="/pictures/provenance_small.gif"></a>
+					<a class="toggle_menu" href="#" onclick="dspToggleAnnotation(); return false;">Comments&nbsp;&nbsp;<img border=0 src="/pictures/annotation_small.gif"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a class="toggle_menu" href="#" onclick="dspToggleProvenance(); return false;">History&nbsp;&nbsp;<img border=0 src="/pictures/provenance_small.gif"></a>
 				</td>
 			</tr>
 		</table>
