* Merged Ondrej's recent changes

--- a/database-wiki/resources/data/html/server-main.html
+++ b/database-wiki/resources/data/html/server-main.html
@@ -62,13 +62,13 @@
 	    <p>
 	    Editing and viewing some pages or data requires logging in.  
 	    This demonstration system doesn't yet have the capability to add new users on-the-fly.  
-	    For this demonstration, anyone is welcome to log in as user "guest", with password "guest_password".
+	    For this demonstration, anyone is welcome to log in as user "Guest", with password "guest".
 	    </p>
 	    
 	    <p> Please feel free to join the <a href="http://lists.inf.ed.ac.uk/mailman/listinfo/db-wiki">Database Wiki project mailing list</a>.</p>
 	    </td></tr>
 	  </table>
-	<tr><td class="footer">(c) 2010 - The University of Edinburgh - Database Group</td></tr>
+	<tr><td class="footer">(c) 2014 - The University of Edinburgh - Database Group</td></tr>
 	</table>
 </body>
 </html>
